src/test/compile-fail/implicit-method-bind.rs
fn main() {
    let _f = 10.times; //~ ERROR attempted to take value of method
}
